# Health-Coach

./: .gitignore  .requirements.txt.swp  README.md  example.env  pure_results.csv  pyproject.toml  requirements.txt  run_dev_env.sh
data/db/: health_coach.db  health_coach.db-shm  health_coach.db-wal  scheme.sql
data/synthetic/train/: episode_000.csv  episode_001.csv  episode_002.csv  episode_003.csv  episode_004.csv  episode_005.csv  episode_006.csv  episode_007.csv  episode_008.csv  episode_009.csv  episode_010.csv  episode_011.csv  episode_012.csv  episode_013.csv  episode_014.csv  episode_015.csv  episode_016.csv  episode_017.csv  episode_018.csv  (+173 more)
knowledge/: user_preference.txt
knowledge/qlearning/: q_learning.txt  shaping.txt
models/: predictor.pkl  q_table.npy
resources/: RL.md  config.yaml  links.md  overview.md  rl_agent.md
resources/diagrams/: agents.mmd  execution_plan.mmd  rl_tasks.mmd  testing.mmd  training_loop.mmd
resources/patient_data/: 0.csv
resources/templates/: report_template.html
results/: explorer_tune.json  pure_rl.json  pure_rl_tune.json  rl_compare_short_episodes.json  rl_compare_short_episodes.json.bak  rl_insights_log.csv
results/final/: agent_compare.json  explorer_tune_results.json  pure_rl_compare.json
rl_data_gen/: drift.py  generate.py  main.py
rl_train/: hyper_param_sweep.py  offline_train.py  online_train.py
rl_train/results/: sweep_results.csv
server/proxy/: ufw_rules.sh
src/data/: health_coach.db
src/health_coach/: agents.py  config.py  crew.py  flows.py  main.py  rl.py  tasks.py  test_generic_flow.py
(+152 files in other folders)
