[project]
name = "health_coach"
version = "0.1.0"
description = "health_coach using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0",
    "scikit-learn>=1.7.0,<2.0.0",
    "shap>=0.47.2",
    "gym>=0.26.0,<1.0.0",
    "pytest>=8.4.1",
    "streamlit>=1.39.0",
    "flask>=3.0.0",
    "flask-cors>=5.0.0",
    "catboost>=1.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
health_coach = "health_coach.main:run"
run_crew = "health_coach.main:run"
train = "health_coach.main:train"
replay = "health_coach.main:replay"
test = "health_coach.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
